# Regression

./: .gitignore  CMakeLists.txt  README.md  SofaRegressionProgram.py  new_regression.py  regression_test.py
.github/workflows/: ci.yml
Regression_test/: CMakeLists.txt  RegressionSceneList.cpp  RegressionSceneList.h  RegressionSceneList.inl  RegressionScene_list.cpp  RegressionScene_list.h  RegressionScene_test.cpp  RegressionScene_test.h  Regression_test.cpp  Regression_test.h  Regression_testConfig.cmake.in  main.cpp
Regression_test/cmake/: environment.cmake
Regression_test/scenes/: FFDDistanceGridCollisionModel.scn
references/: list.txt
references/examples/Components/constraint/: BilateralInteractionConstraint.scn.reference_0_mObject3_mstate.txt
scenes/: FFDDistanceGridCollisionModel.scn  caduceus.scn
tools/: ReferenceFileIO.py  RegressionHelper.py  RegressionSceneData.py  RegressionSceneList.py  RegressionSceneParsing.py
